# ci_pipe

./: .gitignore  README.es.md  README.md  README_es.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: bump-version.yml  publish-test.yml  publish.yml  tag-merge-and-publish.yml  tag-merge.yml  tests.yml
ci_pipe/: ci_pipe_record.py  decorators.py  pipeline.py  plotter.py  result.py  step.py  trace_builder.py
ci_pipe/errors/: ci_pipe_error.py  defaults_after_step_error.py  isx_backend_not_configured_error.py  output_key_not_found_error.py  resume_execution_error.py
ci_pipe/modules/: isx_module.py
ci_pipe/trace/: ci_pipe_trace.py  trace_repository.py
ci_pipe/trace/schema/: branch.py
ci_pipe/utils/: config_defaults.py
docs/examples/caiman_notebooks/: basic_caiman_notebook.ipynb
docs/examples/isx_notebooks/: basic_pipeline.ipynb  graphical_pipeline_usage.ipynb  gui_visualization.ipynb  isx_plus_caiman.ipynb  manual_clean_up_pipeline.ipynb  multi_pipeline.ipynb  recover_pipeline_execution_from_trace.ipynb
docs/examples/multi_module_notebooks/: ixs_caiman_pipeline.ipynb
docs/examples/traces/: single_branch_trace_two_inputs_trace.json
external_dependencies/file_system/: file_system_interface.py  in_memory_file_system.py  persistent_file_system.py
external_dependencies/isx/: in_memory_isx.py
src/ci_pipe/: decorators.py  multi_pipeline.py  pipeline.py  plotter.py  step.py  trace_builder.py
src/ci_pipe/modules/: caiman_module.py  isx_module.py
src/ci_pipe/trace/: ci_pipe_trace.py  trace_repository.py
src/ci_pipe/trace/schema/: branch.py
src/ci_pipe/utils/: isx_utils.py
src/external_dependencies/caiman/: in_memory_caiman.py
src/external_dependencies/file_system/: in_memory_file_system.py  persistent_file_system.py
src/external_dependencies/isx/: in_memory_isx.py
tests/: caiman_test.py  ci_pipe_test_case.py  ci_pipe_trace_builder.py  config_defaults_test.py  isx_test.py  multi_pipeline_test.py  pipeline_clean_up_test.py  pipeline_test.py  plotter_test.py  trace_test.py
tests/fixtures/: pca-ica.isxp
